--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <header>
     <label for="volumeSelect">Volume</label>
     <select id="volumeSelect">
-      <option selected>bet</option>
+      <option selected>tinyT1</option>
+      <option>bet</option>
       <option>Iguana</option>
       <option>CT_Philips</option>
       <option>mni152</option>
@@ -45,7 +46,7 @@
         <input id="isoNumber" type="text" value="100">
       <p>
       <p>
-        <input type="checkbox" id="bubbleCheck" checked/>
+        <input type="checkbox" id="bubbleCheck" unchecked/>
         <label>Fill bubbles</label>
       </p>
       <p>
@@ -65,7 +66,11 @@
       </p>
       <p>
         <label>Simplify Percent (1..100)</label>
-        <input id="shrinkPct" type="number" min="1"  value="100" max="100">
+        <input id="shrinkPct" type="number" min="1"  value="30" max="100">
+      </p>
+      <p>
+        <input type="checkbox" id="wasmCheck" checked/>
+        <label>WASM</label>
       </p>
       <button id="cancelBtn" formmethod="dialog">Cancel</button>
       <button autofocus id="applyBtn" value="default">Apply</button>
@@ -76,6 +81,10 @@
       <p>
         <label>Simplify Percent (1..100)</label>
         <input id="shrinkSimplePct" type="number" min="1"  value="10" max="100">
+      </p>
+      <p>
+        <input type="checkbox" id="simpleWasmCheck" unchecked/>
+        <label>WASM</label>
       </p>
       <button id="cancelBtn" formmethod="dialog">Cancel</button>
       <button autofocus id="applySimpleBtn" value="default">Apply</button>
