--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <input id="shrinkSimplePct" type="number" min="1"  value="10" max="100">
       </p>
       <p>
-        <input type="checkbox" id="simpleWasmCheck" unchecked/>
+        <input type="checkbox" id="simpleWasmCheck" checked/>
         <label>WASM</label>
       </p>
       <button id="cancelBtn" formmethod="dialog">Cancel</button>
